# translation-rules

./: .gitignore  BACKLOG.md  HANDOFF.md  P1-3-PLAN.md  README.md  RECOVERY-PLAN.md  SPEC-cross-property.md  SPEC.md  STATUS-2026-06-12.md  base.yaml  baselines.yaml  migrate-to-rules-root.sh  pyproject.toml
.github/ISSUE_DRAFTS/: 00-clearinghouse.md  p0-1-register-yaml-files.md  p0-2-lint-register.md  p0-3-port-retrospective.md  p0-4-antipattern-harmonize.md  p1-1-json-schemas.md  p1-2-resolver-merge.md  p1-3-resolver-emit.md  p1-4a-this-repo-ci.md  p1-4b-app-repo-integration.md  (+3 more)
_archive/: README.md
_references/: recommended-next-25-languages.md
authoring/: backfill-locale.md  update-language-notes.md
docs/: agent-authored-rules.md  enforcement-model.md  harmonize.md  picking-up-work.md  security-messages.md  terminology.md
en-translation-docs/: glossary.md  language-notes.md
local-guides/: UX-TRANSLATION-GUIDE.md
resolver/: __init__.py  archive_firewall.py  emit_json.py  emit_markdown.py  ids.py  index.json  inheritance.py  lint.py  lint_embedded.py  loader.py  matching.py  merge.py  model.py  resolve.py  retro_lifecycle.py  review_manifest.py  validate.py
retrospectives/: 2026-04-12-de_AT-register-flip.md  2026-04-26-start-translation-session-conventions-drift.md  2026-05-30-de_AT-secret-sense-split.md  README.md
reviews/: README.md
rules/: base.yaml
schema/: base.schema.json  baselines.schema.json  glossary.schema.json  register.schema.json  retrospective.schema.json  rules.schema.json
tests/: lint-register.sh  validate-register-workflow.sh
(+300 files in other folders)
